Female and male split

--- a/HBerk_ssa_names.ipynb
+++ b/HBerk_ssa_names.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -340,7 +340,7 @@
        "4         Ruth  female"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,6 +348,30 @@
    "source": [
     "df = pd.read_csv('ssa_natl_names.csv', header=None)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_f = df.loc[df[1] == 'female']\n",
+    "df_m = df.loc[df[1] == 'male']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df_f.to_csv(\"ssa_female.csv\", index=False, header=False)\n",
+    "df_m.to_csv(\"ssa_male.csv\", index=False, header=False)"
    ]
   }
  ],
